<resources>
    <string name="app_name">Done</string>
    <string name="greeting">Welcome</string>
    <string name="to">to</string>
    <string name="City_State">Irvington, NJ</string>
    <string name="Country">United States</string>
    <string name="FirstTab">Restaurants</string>
    <string name="SecondTab">Parks</string>
    <string name="ThirdTab">Gyms</string>
    <string name="FourthTab">Churches</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="i_do_not_own_any_of_the_pictures">I DO NOT OWN ANY OF THE PICTURES</string>
    <string name="nj_fitness_gym_fragment">NJ FITNESS</string>
    <string name="blink_fitness_gym_fragment">Blink Fitness</string>
    <string name="pump_it_gym_fragment">Pump It Gym</string>
    <string name="planet_fitness_gym_fragment">Planet Fitness</string>
    <string name="nj_fitness_address_gym_fragment">1015 Springfield Ave, Irvington, NJ 07111</string>
    <string name="blink_fitness_gym_address_fragment">440 Eastern Parkway, Irvington, NJ 07111</string>
    <string name="pump_it_gym_address_gym_fragment">721 Chancellor Ave, Irvington, NJ 07111</string>
    <string name="planet_fitness_gym_address_gym_fragment">480 Chancellor Ave, Irvington, NJ 07111</string>
    <string name="pump_it_gym_phone_number_gym_fragment">(973) 687-8636</string>
    <string name="blink_fitness_gym_phone_number_gym_fragment">(862)-229-6744</string>
    <string name="nj_fitness_it_gym_phone_number_gym_fragment">+18622316986</string>
    <string name="planet_fitness_gym_phone_number_gym_fragment">(973) 705-7400</string>
    <string name="Christian_Love_Baptist_Church_ChurchesFragment">Christian Love Baptist Church</string>
    <string name="second_reformed_church_ChurchesFragment">Second Reformed Church</string>
    <string name="transcend_wordship_center_ChurchesFragment">Transcend Worship Center</string>
    <string name="irvington_united_methodist_church_ChurchesFragment">Irvington United Methodist Church</string>
    <string name="good_shepherd_parish_ChurchesFragment">Good Shepherd Parish</string>
    <string name="christian_love_baptist_church_address_ChurchesFragment">830 Lyons Ave, Irvington, NJ 07111</string>
    <string name="second_reformed_church_address_ChurchesFragment">132 Elmwood Ave, Irvington, NJ 07111</string>
    <string name="transcend_wordship_center_address_ChurchesFragment">971 Clinton Ave, Irvington, NJ 07111</string>
    <string name="irvington_united_methodist_address_ChurchesFragment">37 Union Ave, Irvington, NJ 07111</string>
    <string name="good_shepard_church_address_ChurchesFragment">954 Stuyvesant Ave, Irvington, NJ 07111</string>
    <string name="christian_love_baptist_church_phone_ChurcesFragment">973-375-5823</string>
    <string name="second_reformed_church_phone_ChurchesFragment">(973) 373-4525</string>
    <string name="transcend_wordship_center_phone_ChurchesFragment">(973) 399-7000</string>
    <string name="irvington_united_methodist_church_phone_ChurchesFragment">(973) 372-6800</string>
    <string name="good_shepard_church_phone_ChurchesFragment">(973) 375-8568</string>
    <string name="irvington_park_ParkFragment">Irvington Park</string>
    <string name="garden_state_chancellor_park_ParkFragment">Garden State Chancellor Park</string>
    <string name="montgomery_park_ParkFragment">Montgomery Park</string>
    <string name="parkway_playground_park_ParkFragment">Parkway Playground</string>
    <string name="futbol_ecuatoriano_ParkFragment">Futbol Ecuatoriano</string>
    <string name="irvington_park_address_ParkFragment">Lyons Ave and Grove St, Irvington, NJ 07111</string>
    <string name="garden_state_chancellor_park_address_ParkFragment">Garden State Chancellor Park, Irvington, NJ 07111</string>
    <string name="montgomery_park_address_ParkFragment">495 21st St, Irvington, NJ 07111</string>
    <string name="parkway_playground_park_address_ParkFragment">Ellis Ave (Hopkins Pl), Irvington, NJ 07111"</string>
    <string name="futbol_ecuatoriano_park_address_ParkFragment">1143-, 1201 County Rd 509, Irvington, NJ 07111</string>
    <string name="big_joes_restaurant_RestaurantsFragment">Big Joe\'s</string>
    <string name="la_bonte_restaurant_RestaurantsFragment">La Bonté Restaurant</string>
    <string name="san_salvador_restaurant_RestaurantsFragment">San Salvador Restaurant</string>
    <string name="plaza_mexico_restaurant_RestaurantsFragment">Plaza Mexico</string>
    <string name="flava_wingz_restaurant_RestaurantsFragment">Flava Wingz Spot Restaurant</string>
    <string name="big_joes_restaurant_address_RestaurantsFragment">1280 Springfield Ave,Irvington NJ 07111</string>
    <string name="la_bonte_restaurant_address_RestaurantsFragment">1266 Springfield Ave, Irvington, NJ 07111</string>
    <string name="san_salvador_restaurant_address_RestaurantsFragment">1282 Springfield Ave, Irvington, NJ 07111</string>
    <string name="mexico_restaurant_address_RestaurantsFragment">1193 Springfield Ave, Irvington, NJ 07111</string>
    <string name="flava_wingz_restaurant_address_RestaurantsFragment">693 Lyons Ave, Irvington, NJ 07111</string>
    <string name="big_joes_restaurant_phone_RestaurantsFragment">973-375-8224</string>
    <string name="la_bonte_restaurant_phone_RestaurantsFragment">(973) 375-2550</string>
    <string name="san_salvador_restaurant_phone_RestaurantsFragment">(973) 373-3800</string>
    <string name="mexico_restaurant_phone_RestaurantsFragment">(973) 374-5440</string>
    <string name="flava_wingz_restaurant_phone_RestaurantsFragment">(973) 757-2442</string>
</resources>
